--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -69,7 +69,7 @@ jobs:
             pyenv_exec=$(python3 scripts/mapai_toolkit/version_extractor.py --config $team/pyproject.toml)
             eval "$pyenv_exec -m venv env"
             #python3 -m venv env
-            #source env/bin/activate
+            source env/bin/activate
             
             # Install team dependencies
             pip3 install $team
