--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -109,13 +109,13 @@ jobs:
           path: |
             /tmp/mapai-result-artifacts/*.json
 
-      - name: Commit files
-        run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git commit -m "Adding result files generated during evaluation" -a
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.ADD_RESULTS_TOKEN }}
-          branch: ${{ github.ref }}
+      #- name: Commit files
+      #  run: |
+      #    git config --local user.email "github-actions[bot]@users.noreply.github.com"
+      #    git config --local user.name "github-actions[bot]"
+      #    git commit -m "Adding result files generated during evaluation" -a
+      #- name: Push changes
+      #  uses: ad-m/github-push-action@master
+      #  with:
+      #    github_token: ${{ secrets.ADD_RESULTS_TOKEN }}
+      #    branch: ${{ github.ref }}
