--- a/.github/workflows/evaluate.yml
+++ b/.github/workflows/evaluate.yml
@@ -105,7 +105,7 @@ jobs:
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: dist-without-markdown
+          name: evaluation_results
           path: |
             /tmp/mapai-result-artifacts/*.json
 
