Updated web to include README.md

--- a/.github/workflows/build_report.yaml
+++ b/.github/workflows/build_report.yaml
@@ -34,7 +34,7 @@ jobs:
 
 
       - name: Install dependencies
-        run: python3 -m pip install web/
+        run: python3 -m pip install .github/web/
 
       - name: Download artifact
         id: download-artifact
@@ -48,7 +48,7 @@ jobs:
 
       - name: Build with Python and Jinja2
         # Outputs to the './_site' directory by default
-        run: python3 web/src/main.py --out "./_site" --competition-title "NORA MapAI-Competition" --prefix "team"
+        run: python3 .github/web/src/main.py --out "./_site" --competition-title "NORA MapAI-Competition" --prefix "team"
 
       - name: Setup Pages
         id: pages
