--- a/.github/web/pyproject.toml
+++ b/.github/web/pyproject.toml
@@ -13,6 +13,7 @@ classifiers = [
 ]
 dependencies = [
     "pyenv-api==1.1.0",
+    "Markdown==3.4.1",
     "Jinja2==3.1.2",
     "pydantic==1.10.2",
     "tomli==2.0.1"
