--- a/team_aiveo/pyproject.toml
+++ b/team_aiveo/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "team-aiveo"
+github_name = "dummy"
 description = "Configuring the environment for running python and ML"
 requires-python = ">=3.7"
 keywords = []
